--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "socket-listener",
   "version": "0.0.1",
   "description": "listen to socket messages",
+  "scripts": {
+    "start": "node start.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
